Make documentation a bit more clear

--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -46,7 +46,7 @@ There are 3 Database options:
 
 ## Your first schema
 
-In the root of your application, run to create the schema directory:
+In the root of your application, run the following command to create the schema directory:
 
 ```shell
 mkdir -p src/schema
