update some docs
* add rg as dependency for running locally
* indicate snowtop versions for ent-email and ent-password since we have the weird alpha ones

--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -84,7 +84,7 @@ Then run the following commands:
 
 ```shell
 # install additional dependencies
-npm install @snowtop/ent-email @snowtop/ent-password
+npm install @snowtop/ent-email@0.0.2 @snowtop/ent-password@0.0.2
 # generate code + update the database
 npm run codegen
 ```
