--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -192,7 +192,7 @@ which leads to the following changed files:
   new file:   src/graphql/mutations/generated/mutation_type.ts
   new file:   src/graphql/mutations/generated/user/user_create_type.ts
   modified:   src/graphql/generated/schema.gql
-  modified:   src/graphql/schema.ts
+  modified:   src/graphql/generated/schema.ts
   modified:   src/schema/user.ts
 ```
 
