--- a/docs/docs/intro.mdx
+++ b/docs/docs/intro.mdx
@@ -95,7 +95,7 @@ After running `npm run codegen`, here's a list of generated files:
 (The first time this is run, it'll take a while because it's downloading the base Docker image).
 
 ```shell
-  new file:   src/ent/generated/const.ts
+  new file:   src/ent/generated/types.ts
   new file:   src/ent/generated/loadAny.ts
   new file:   src/ent/generated/loaders.ts
   new file:   src/ent/generated/user_base.ts
